<resources>
    <string name="app_name">Activity navigation</string>
    <string name="btn_open_box">Open box</string>
    <string name="btn_options">Options</string>
    <string name="btn_about">About</string>
    <string name="btn_exit">Exit</string>
    <string name="tw_version_text">Version:</string>
    <string name="btn_back">Back</string>
    <string name="tw_options_text">Options:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>

    <plurals name="boxes">
        <item quantity="zero">%1$d boxes</item>
        <item quantity="one">%1$d box</item>
        <item quantity="two">%1$d boxes</item>
        <item quantity="few">%1$d boxes</item>
        <item quantity="many">%1$d boxes</item>
        <item quantity="other">%1$d boxes</item>
    </plurals>
</resources>